# raoul

./: .gitignore  BACKUP  pyproject.toml
src/raoul/: main.py
