[tool.poetry]
name = "raoul"
version = "0.1.0"
description = ""
authors = ["radium226"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.24.1"
scikit-learn = "^0.23.1"
audiosegment = "^0.22.2"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
raoul = "raoul:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

